Separated `stresser` submodules.